--- a/client/navbar/navbar.html
+++ b/client/navbar/navbar.html
@@ -25,7 +25,7 @@
                             <li><a href="/jobsNew">Add a Job Requirement</a></li>
                             <li><a href="#">Reports</a></li>
                             <li role="separator" class="divider"></li>
-                            <li><a href="#">Separated link</a></li>
+                            <li><a href="/applicants">Applicants</a></li>
                             <li role="separator" class="divider"></li>
                             <li><a href="#">One more separated link</a></li>
                         </ul>
